methods.picture.PictureMono1.scala.error
Compilation error:
PictureMono1:15: error: reassignment to val
  i = i + 1;
    ^